--- a/style.css
+++ b/style.css
@@ -5,5 +5,5 @@ body { background-color: #ffc; text-align: center; }
 X.page-link { background-color: rgba(0,0,0,25%); border-radius: 10px; }
 X.page-link:hover { background-color: rgba(0,0,0,60%); }
 
-.my-boxes a { display:block; border: 1px solid green; text-align: center; padding: 30px; min-height: 300px; font-size: 24px; background-color: rgba(0,0,0,25%); border-radius: 10px; }
+.my-boxes a { display:block;  text-align: center; padding: 30px; min-height: 300px; font-size: 24px; background-color: rgba(0,0,0,25%); border-radius: 10px; }
 .my-boxes a:hover { background-color: rgba(0,0,0,60%); }
