--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@ body { background-color: #fff;}
 .webpage-max-width { max-width: 1400px; margin: 0 auto;  }
 .home-page-image-section { 
 	background-image: url("assets/img0.jpg"); background-size: cover; background-position: center; 
-	padding: 0 32px 0 32px; border-radius: 10px; text-align: center;}
+	padding: 0 32px 0 32px; border-radius: 10px; text-align: center;
+	font-family: 'Oswald', sans-serif;
+
+	text-transform: uppercase;
+	font-weight: 700;
+}
 
 .home-page-image-section a, .home-page-image-section a:link, .home-page-image-section a:visited, .home-page-image-section a:hover,home-page-image-section  a:active  {color: #ffffff; }
 
-.my-boxes a { display:block;  text-align: center; padding: 30px; min-height: 200px; font-size: 24px; background-color: rgba(0,0,0,25%); border-radius: 10px; margin-bottom: 32px;}
+.my-boxes a { display:block;  text-align: center; padding: 30px; min-height: 200px; font-size: 24px; background-color: rgba(0,0,0,25%); border-radius: 10px; margin-bottom: 32px; }
 .my-boxes a:hover { background-color: rgba(0,0,0,60%); }
