--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body { background-color: #fff;}
-.navbar-nav .nav-link { padding: 0 25px !important; }
+.navbar-nav .nav-link { padding: 0 25px !important;
+	font-family: 'Oswald', sans-serif;
+	text-transform: uppercase; }
 .navbar-nav .nav-link.home-link { padding-top: 10px !important; }
 .webpage-max-width { max-width: 1400px; margin: 0 auto;  }
 .home-page-image-section { 
@@ -10,7 +12,8 @@ body { background-color: #fff;}
 	text-transform: uppercase;
 	font-weight: 700;
 }
-
+h1,h2 {font-family: 'Oswald', sans-serif;
+	text-transform: uppercase; }
 .home-page-image-section a, .home-page-image-section a:link, .home-page-image-section a:visited, .home-page-image-section a:hover,home-page-image-section  a:active  {color: #ffffff; }
 
 .my-boxes a { display:block;  text-align: center; padding: 30px; min-height: 200px; font-size: 24px; background-color: rgba(0,0,0,25%); border-radius: 10px; margin-bottom: 32px; }
